Bug 115576 - Missing right border when table is insert with just one cell
Summary: Missing right border when table is insert with just one cell
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Justin L
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
: 116711 120402 120951 (view as bug list)
Depends on:
Blocks: Writer-Table-Styles Table-Borders
  Show dependency treegraph
 
Reported: 2018-02-09 10:57 UTC by Telesto
Modified: 2019-12-04 21:15 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-02-09 10:57:53 UTC
Description:
EDITING: There is no right border when inserting a single table cell

Steps to Reproduce:
1. Open Writer
2. Insert a single table cell
3. Open Table Properties -> Borders. Notice that right border isn't active

Actual Results:  
No right border line

Expected Results:
Should be there


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.1.0.0.alpha0+
Build ID: 8a0b61172a14b8b766a2e85f27762db3558d3af7
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-02-06_03:28:54
Locale: nl-NL (nl_NL); Calc: CL

but not in
Version: 6.0.0.0.alpha1+
Build ID: dae6ba564fcf20299b7a560aeb346efc84364d41
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-11-01_00:28:17
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Telesto 2018-02-09 10:58:59 UTC
Looks like an Autoformat styles bug, similar to bug 115026
Comment 2 Telesto 2018-02-09 11:07:25 UTC
It's in essence an Autoformat styles bug. Also reproducible with:
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 3 Buovjaga 2018-03-04 18:20:10 UTC
Repro.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 13164cc99dc6184fb2c12e56e9c0dea0d5692eec
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 4th 2018
Comment 4 haim kilov 2018-03-19 03:25:41 UTC
Reproducible with 6.0.1 (Mac OS 10.9.5)
Comment 5 Telesto 2018-04-01 13:07:25 UTC
*** Bug 116711 has been marked as a duplicate of this bug. ***
Comment 6 Telesto 2018-10-08 21:39:54 UTC
@Jim
Only FYI, this bug is more apparent since:
author	Jim Raykowski <raykowj@gmail.com>	2017-10-31 15:48:07 -0800
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-12-20 09:11:47 +0100
commit 416f7578d6332b5b5a4445f26307d73925188e41 (patch)
tree c84e21fe1b096f149baf03a95bce82f5b385ad2e
parent 226804c8f7d2306562380283edfd919a88863807 (diff)
tdf#107555 Apply 'Default Style' table style to newly inserted tables
Comment 7 Dieter 2018-10-09 11:08:13 UTC
*** Bug 120402 has been marked as a duplicate of this bug. ***
Comment 8 Telesto 2018-10-27 20:28:33 UTC
*** Bug 120951 has been marked as a duplicate of this bug. ***
Comment 9 Justin L 2019-11-18 17:17:30 UTC
Proposed fix is at https://gerrit.libreoffice.org/82998

This could easily be seen by setting one column and X rows using the default table style - missing right border.
    
It could also be seen by setting one row and X columns using Box List yellow - missing bottom border.
Comment 10 Commit Notification 2019-11-19 08:53:04 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/46fcf87725818666fee34226afdac4a64edd94eb

tdf#115576 sw: fix borders for single row/col autotable styles

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2019-11-20 14:45:42 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/be8bb002e38a463a2079da68b274f929170a1212

tdf#115576 sw: fix borders for single row/col autotable styles

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.