tdf#115576 sw: fix borders for single row/col autotable styles

The 4*4 autostyle table matrix has no box format that can handle
a table with a single column or single row. So the first
and last row/column boxes need to be combined to get all
of the necessary borders.

This could easily be seen by setting one column and X rows
using the default table style - missing right border.

It could also be seen by setting one row and X columns using
Box List yellow - missing bottom border.

Change-Id: Ib2cf873b6d4e10ba5145e680ea7b3e2e3aea3970
Reviewed-on: https://gerrit.libreoffice.org/82998
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>