sw/source/core/doc/tblafmt.cxx
@@ -559,7 +559,7 @@ void SwTableAutoFormat::UpdateFromSet( sal_uInt8 nPos,
     // we cannot handle the rest, that's specific to StarCalc
 }
 
-void SwTableAutoFormat::UpdateToSet(sal_uInt8 nPos, SfxItemSet& rSet,
+void SwTableAutoFormat::UpdateToSet(const sal_uInt8 nPos, const bool bSingleRowTable, const bool bSingleColTable, SfxItemSet& rSet,
                                  SwTableAutoFormatUpdateFlags eFlags, SvNumberFormatter* pNFormatr) const
 {
     const SwBoxAutoFormat& rChg = GetBoxFormat( nPos );
@@ -617,7 +617,26 @@ void SwTableAutoFormat::UpdateToSet(sal_uInt8 nPos, SfxItemSet& rSet,
     {
         if( IsFrame() )
         {
-            rSet.Put( rChg.GetBox() );
+            SvxBoxItem aAutoFormatBox = rChg.GetBox();
+
+            // No format box is adequate to specify the borders of single column/row tables, so combine first/last.
+            if ( bSingleRowTable || bSingleColTable )
+            {
+                sal_uInt8 nSingleRowOrColumnId = 15; //LAST_ROW_END_COLUMN
+                if ( !bSingleRowTable )
+                    nSingleRowOrColumnId = nPos + 3;  //LAST COLUMN (3, 7, 11, 15)
+                else if ( !bSingleColTable )
+                    nSingleRowOrColumnId = nPos + 12; //LAST ROW (12, 13, 14, 15)
+
+                assert( nSingleRowOrColumnId < 16 );
+                const SvxBoxItem aLastAutoFormatBox( GetBoxFormat(nSingleRowOrColumnId).GetBox() );
+                if ( bSingleRowTable )
+                    aAutoFormatBox.SetLine( aLastAutoFormatBox.GetLine(SvxBoxItemLine::BOTTOM), SvxBoxItemLine::BOTTOM );
+                if ( bSingleColTable )
+                    aAutoFormatBox.SetLine( aLastAutoFormatBox.GetLine(SvxBoxItemLine::RIGHT), SvxBoxItemLine::RIGHT );
+            }
+
+            rSet.Put( aAutoFormatBox );
 // FIXME - uncomment the lines to put the diagonal line items
 //            rSet.Put( rChg.GetTLBR() );
 //            rSet.Put( rChg.GetBLTR() );
